--- a/src/css/App.css
+++ b/src/css/App.css
@@ -45,7 +45,7 @@
   /* outline: 1px solid greenyellow; */
 }
 
-.navgation {
+.navigation {
   color: #fff;
   font-size: 16px;
 }
@@ -68,7 +68,7 @@
 
 .content {
   width: 1200px;
-  background-color: #fff;
+  background-color: pink;
   margin: 64px auto 0 auto;
 }
 
