--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,3 @@
-/**
-该文件是 App 根组件所对应的样式
-**/
 .header {
   width: 100%;
   position: fixed;
@@ -68,14 +65,19 @@
 
 .content {
   width: 1200px;
-  background-color: pink;
-  margin: 64px auto 0 auto;
+  /* height: 5000px; */
+  background-color: #fff;
+  margin: 85px auto 0 auto;
 }
 
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* outline: 1px solid red; */
+}
+
+.footer p {
+  text-align: center;
+  color: rgb(102, 102, 102);
+  margin: 0 auto 16px;
 }
 
 .paginationContainer {
