--- a/src/css/App.css
+++ b/src/css/App.css
@@ -67,7 +67,8 @@
   width: 1200px;
   /* height: 5000px; */
   background-color: #fff;
-  margin: 85px auto 0 auto;
+  margin: 64px auto 0 auto;
+  padding-top:20px;
 }
 
 .footer {
